# comfyui-helper

./: .gitattributes  .mcp.json  DEVELOPMENT.md  README.md  main.py  pyproject.toml  test_video_extraction.py
comfyui_helper/: __init__.py  __main__.py  main.py
comfyui_helper/cli/: gif_maker_gui.py  main.py
comfyui_helper/core/: sprite_composer.py
comfyui_helper/mcp/: __init__.py
comfyui_helper/mcp/resources/: __init__.py  sprite_resources.py
comfyui_helper/mcp/tools/: __init__.py  image_tools.py  sprite_tools.py  video_tools.py
docs/troubleshooting/: rmbg-2.0-transformers-compatibility-issue.md
examples/: README.md
examples/image_scaling/: README.md
examples/sprite_sheet/: README.md  config.json
examples/sprite_sheet/output/: character_sprite_spritesheet.json  spritesheet.json
examples/video_extraction/: README.md
scripts/: README.md  generate_test_sprites.py  generate_test_videos.py
src/comfyui_helper/: image_scaler.py  main.py  sprite_composer.py
src/comfyui_helper/cli/: __init__.py  gif_maker.py  gif_maker_gui.py
src/comfyui_helper/core/: video_frame_extractor.py
src/comfyui_helper/mcp/resources/: __init__.py  guide_resources.py  sprite_resources.py
src/comfyui_helper/mcp/tools/: __init__.py
src/comfyui_helper/tools/: __init__.py  background_remover.py
tests/: __init__.py  run_all_tests.py  test_sprite_composer.py  test_video_extractor.py
